--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.9",
     "redux-firestore": "^0.14.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "yarn": "^1.22.11"
   },
   "scripts": {
     "start": "react-scripts start",
