--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "build": "^0.1.4",
     "firebase": "^8.0.0",
     "html2canvas": "^1.0.0-rc.7",
     "immutability-helper": "^3.1.1",
